--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.13"
 fastapi = {extras = ["standard"], version = "^0.115.6"}
+sqlmodel = "^0.0.22"
+alembic = "^1.14.0"
+psycopg2 = "^2.9.10"
 
 
 [tool.poetry.group.dev.dependencies]
