--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ sqlmodel = "^0.0.22"
 alembic = "^1.14.0"
 psycopg2 = "^2.9.10"
 pydantic-settings = "^2.7.0"
+asyncpg = "^0.30.0"
+greenlet = "^3.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
